@@ -3,6 +3,35 @@ set -x
 
 #Initialize all the environment
 
+#Create test result xml file - call:
+#create_test_result( testname, message, failures=0 )
+create_test_result() {
+    if [ -z "$3" ]; then
+        FAILURES="0"
+    else
+        FAILURES="$3"
+    fi
+
+    mkdir -p $WORKSPACE/results
+
+    FILE="$WORKSPACE/results/TEST-$1.xml"
+    echo '<?xml version="1.0" encoding="UTF-8" ?>' >$FILE
+    echo '<testsuite errors="0" failures="'$FAILURES'" name="'$1'" tests="1" time="1">' >>$FILE
+    echo '  <properties>' >>$FILE
+    echo '  </properties>' >>$FILE
+    echo '  <testcase classname="'$1'" name="'$1'" time="1">' >>$FILE
+    if [ "$FAILURES" -gt "0" ]; then
+        echo '  <failure message="Failed"/>' >>$FILE
+    fi
+    echo '  </testcase>' >>$FILE
+    echo '  <system-out><![CDATA[' >>$FILE
+    echo "$2" >>$FILE
+    echo ']]></system-out>' >>$FILE
+    echo '  <system-err></system-err>' >>$FILE
+    echo '</testsuite>' >>$FILE
+}
+
+
 #ML BUILD yes/no 1/0
 if [ -z ${ML_BUILD} ]; then
     export ML_BUILD=1
@@ -15,15 +44,16 @@ if [ -z ${UPLOAD_ML} ]; then
     export UPLOAD_ML=0
 fi
 
-if [ -z ${UPLOAD_JDK} ]; then
-    export UPLOAD_JDK=0
-fi
-
-export ANT_OPTS="-Xmx512m"
+export ANT_OPTS="-Xmx512m -XX:MaxPermSize=256m"
 export JAVA_HOME=$JDK_HOME
 
 if [ -z ${DATESTAMP} ]; then
-    export DATESTAMP=`date -u +%Y%m%d%H%M`
+    if [ -z ${BUILD_ID} ]; then
+        export DATESTAMP=`date -u +%Y%m%d%H%M`
+    else
+        #Use BUILD_ID from hudson, remove all "-" and "_" and cut it to 12 chars
+        export DATESTAMP=`echo ${BUILD_ID} | sed -e "s/[-_]//g" | cut -c 1-12`
+    fi
 fi
 
 BUILDNUM=$BUILD_DESC-$DATESTAMP
@@ -46,7 +76,9 @@ if [ -z $DIST_SERVER_PATH ]; then
     DIST_SERVER_PATH=/releng/www/netbeans/6.0/nightly
 fi
 
-NB_ALL=$BASE_DIR/main
+if [ -z $NB_ALL ]; then
+    NB_ALL=$BASE_DIR/main
+fi
 
 DIST=$BASE_DIR/dist
 LOGS=$DIST/logs
@@ -67,5 +99,6 @@ RUBY_BUILD_LOG=$LOGS/$BASENAME-build-ruby.log
 NBMS_BUILD_LOC=$LOGS/$BASENAME-build-nbms.log
 SCP_LOG=$LOGS/$BASENAME-scp.log
 MAC_LOG=$LOGS/$BASENAME-native_mac.log
+MAC_LOG_NEW=$LOGS/$BASENAME-native_mac_new.log
 INSTALLER_LOG=$LOGS/$BASENAME-installers.log
 VISUALWEB_SANITY_LOG=$LOGS/$BASENAME-sanity-visualweb.log
